swagger 1.2 (delete)
